# Dynamic-VINS

./: .gitignore  README.md
camera_model/: CMakeLists.txt
config/: campus.rviz  indoor.rviz  tsinghua.rviz  video.rviz
config/openloris/: openloris_vio.yaml  openloris_vio_atlas.yaml
config/realsense/: vio.yaml  vio_atlas.yaml  vio_campus.yaml
config/tum_rgbd/: tum_fr3.yaml  tum_fr3_atlas.yaml
doc/: INSTALL.md  MULTIPLE_DEVICES.md
pose_graph/: CMakeLists.txt  nodelet_plugin.xml  package.xml
pose_graph/src/: pose_graph_nodelet.cpp
pose_graph/src/keyframe/: keyframe.cpp  keyframe.h
pose_graph/src/pose_graph/: pose_graph.cpp  pose_graph.h
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
scripts/: download_hitsz.sh  download_thusz.sh  merge_imu_topics.py  rosbag_chunk.py  rosbag_merge_chunk.py
vins_estimator/: CMakeLists.txt  nodelet_description.xml  package.xml
vins_estimator/launch/: vins_rviz.launch
vins_estimator/launch/atlas200/: compressed2img.launch  img2compressed.launch
vins_estimator/launch/openloris/: openloris_vio_atlas.launch  openloris_vio_pytorch.launch  openloris_vio_tensorrt.launch  openloris_vo.launch
vins_estimator/launch/realsense/: realsense_vio.launch  realsense_vio_atlas.launch  realsense_vio_campus.launch  rs_camera.launch
vins_estimator/launch/tum_rgbd/: tum_rgbd_atlas.launch  tum_rgbd_pytorch.launch  tum_rgbd_tensorrt.launch
vins_estimator/launch/yolo/: atlas.launch  pytorch.launch  tensorrt.launch
vins_estimator/src/: estimator_nodelet.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h
vins_estimator/src/factor/: imu_factor.h  imu_factor_modified.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
vins_estimator/src/feature_manager/: feature_manager.cpp  feature_manager.h
vins_estimator/src/feature_tracker/: ThreadPool.h  feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  parameters.cpp  parameters.h  tic_toc.h  utility.cpp  utility.h  visualization.cpp  visualization.h
