<?xml version="1.0"?>
<package>
    <name>vins_estimator</name>
    <version>0.0.0</version>
    <description>The vins_estimator package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="qintonguav@gmail.com">qintong</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>camera_model</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>camera_model</run_depend>

    <build_depend>yolo_ros</build_depend>
    <run_depend>yolo_ros</run_depend>

    <build_depend>nodelet</build_depend>
    <run_depend>nodelet</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- You can specify that this package is a metapackage here: -->
        <!-- <metapackage/> -->

        <!-- Other tools can request additional information be placed here -->
        <nodelet plugin="${prefix}/nodelet_description.xml"/>
    </export>
</package>
